[package]
name = "signed-crypto"
version = "0.1.2"
description = "A Rust library for encrypted payloads with built-in integrity verification"
authors = ["Kehan Pan <prestorpan@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/aptxx/signed-crypto"
keywords = ["encryption", "crypto", "aes", "hmac", "security"]
categories = ["cryptography"]

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
byteorder = "1.5.0"
ctr = "0.9.2"
hmac = "0.12.1"
rand = "0.9.1"
sha2 = "0.10.9"
thiserror = "2.0.12"
time = "0.3.41"
